<resources>
    <string name="app_name">SmartPlug</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nice_to_see_you_again">Nice to see you again!</string>
    <string name="hi_there">Hi there!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_dados">DadosActivity</string>
    <string name="come_ar">Começar</string>
    <string name="todo_1">logo1</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome">Nome</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="gravar">GRAVAR</string>
    <string name="configura_es_1">Configurações</string>
    <string name="configura_es_2">Configurações</string>
    <string name="logo">LOGO</string>
    <string name="todo_2">logo3</string>
    <string name="guestHome">User</string>
    <string name="desligado">Desligado</string>
    <string name="ligaem">Ligar em</string>
    <string name="ligado">Ligado</string>
    <string name="desligaem">Desligar em</string>
    <string name="on">ON</string>
</resources>
